--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@triframe/arbiter": "^0.5.1",
     "@triframe/arbiter-react": "^0.4.5",
     "@triframe/core": "^0.2.4",
-    "@triframe/scribe": "^0.2.7"
+    "@triframe/scribe": "^0.2.7",
+    "bcrypt": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
