--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-google-maps/api": "^1.13.0",
     "@triframe/arbiter": "^0.5.1",
     "@triframe/arbiter-react": "^0.4.5",
     "@triframe/core": "^0.2.4",
     "@triframe/scribe": "^0.2.7",
-    "bcrypt": "^5.0.0"
+    "bcrypt": "^5.0.0",
+    "mapbox-gl": "^1.12.0",
+    "react-map-gl": "^5.2.10"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
